--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,11 @@
+.bubulala {
+    font-size: 30px;
+    line-height: 0px;
+    height: 20px;
+    background-color: #101010;
+    padding: 15px;
 
+}
 /* 
 
     You can write your own styles here...
